--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "migrate-dev": "npx prisma migrate dev",
+    "migrate-deploy": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
